# docker-opengl

./: Dockerfile
app/: CMakeLists.txt
app/src/: main.cpp  main.h
app/src/application/: application.cpp  application.h
